--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,9 @@
   <nav>
     <div class="logo">Notes</div>
     <div>
-      <button type="button">Add New &#x2b;</button>
+      <button type="button" (click)="onNewBtnClick()">
+        New <span style="font-weight: bold">+</span>
+      </button>
     </div>
   </nav>
 </header>
