--- a/src/app/notes/note-item/note-item.component.css
+++ b/src/app/notes/note-item/note-item.component.css
@@ -6,6 +6,8 @@
   max-width: 200px;
   user-select: none;
   cursor: pointer;
+
+  animation: pop-in 0.25s ease-out forwards;
 }
 
 .note-header {
@@ -36,4 +38,35 @@
   margin: 0;
   line-height: 1.4;
   user-select: none;
+}
+
+@keyframes pop-in {
+  0% {
+    transform: scale(0, 0);
+    opacity: 0;
+  }
+
+  70% {
+    transform: scale(1.1, 1.1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+@keyframes pop-out {
+  0% {
+    transform: scale(1, 1);
+    opacity: 1;
+  }
+
+  40% {
+    transform: scale(1.1, 1.1);
+  }
+
+  100% {
+    transform: scale(0, 0);
+  }
 }
