--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -3,5 +3,7 @@
     *ngFor="let note of notes"
     [name]="note.name"
     [content]="note.content"
+    [id]="note.id"
+    (openNote)="onOpenNote($event)"
   ></app-note-item>
 </div>
