--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
 <app-header (open-dialog)="openNewNoteDialog()"></app-header>
 <main>
-  <app-notes [notes]="notes"></app-notes>
+  <app-notes
+    *ngIf="notes.length > 0; else noNotesFound"
+    [notes]="notes"
+    (openNote)="onOpenExistingNote($event)"
+  ></app-notes>
+  <ng-template #noNotesFound>
+    <p class="no-notes-found">Nothing here... Start by creating new notes!
+  </ng-template>
 </main>
 
 <app-new-note
   *ngIf="showNewNoteDialog"
+  [data]="noteData"
   (cancel)="closeNewNoteDialog()"
   (save)="onSaveNote($event)"
 ></app-new-note>
