--- a/src/app/notes/note-item/note-item.component.css
+++ b/src/app/notes/note-item/note-item.component.css
@@ -1,7 +1,7 @@
 .note-wrapper {
   box-shadow: 0px 0px 5px #666;
   border-radius: 10px;
-  background-color: #ccc;
+  background-color: #fae8a9;
   overflow: hidden;
   max-width: 200px;
   user-select: none;
@@ -11,16 +11,31 @@
 }
 
 .note-header {
-  box-shadow: 0px 0px 5px #666;
-  background-color: #aaa;
+  box-shadow: 0px 0px 4px #333;
+  background-color: #fee68d;
   color: #333;
   font-size: 1rem;
   font-weight: bold;
   padding: 8px 14px;
-  overflow: hidden;
+  position: relative;
+}
+
+.backslash {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  top: 0;
+  opacity: 0.1;
+}
+
+.note-header .header-title {
   text-overflow: ellipsis;
   white-space: nowrap;
   user-select: none;
+  overflow: hidden;
 }
 
 .note-body {
