--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 header {
   width: 100%;
-  background-color: #ffca00;
+  /* background-color: #ffca00; */
+  background-color: #e4b016;
   color: #333;
   box-shadow: 0px 2px 5px #999;
 
@@ -13,7 +14,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 1.25rem;
 }
 
 nav .logo {
@@ -23,7 +24,7 @@ nav .logo {
 
 button {
   border: none;
-  background: none;
+  background: #ffd000;
   font-size: 1rem;
   color: #555;
   border: solid 1px #555;
@@ -32,6 +33,7 @@ button {
   margin: 0;
   cursor: pointer;
   transition: all 0.1s;
+  font-weight: bold;
 }
 
 button:hover {
