--- a/src/app/new-note/new-note.component.css
+++ b/src/app/new-note/new-note.component.css
@@ -6,6 +6,7 @@
 
   width: 100%;
   height: 100vh;
+
   z-index: 10;
 }
 
@@ -30,7 +31,7 @@
   width: 100%;
   left: 0;
   right: 0;
-  max-width: 400px;
+  max-width: 450px;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0px 0px 12px #333;
@@ -64,9 +65,12 @@
 
 .input-wrapper-name {
   background-color: #ffca00;
-  padding: 1rem 0;
+  padding: 0.75rem 0;
   padding-bottom: 0;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 input, textarea {
@@ -77,6 +81,10 @@ input, textarea {
   border-bottom: #999 solid 1px;
   width: 100%;
   padding: 0.25rem 1rem;
+}
+
+input  {
+  padding-bottom: 0.5rem;
 }
 
 textarea {
@@ -101,6 +109,10 @@ button {
 
 button:hover {
   background-color: #eee;
+}
+
+.color-option {
+  text-transform: capitalize;
 }
 
 @keyframes fade-in {
