--- a/src/app/new-note/new-note.component.html
+++ b/src/app/new-note/new-note.component.html
@@ -4,6 +4,15 @@
     <form class="new-note-form">
       <div class="input-wrapper-name">
         <input type="text" name="name" placeholder="Name" [(ngModel)]="name" />
+        <select
+          class="color-option-dropdown"
+          (change)="onColorChange($event)"
+          [value]="shade"
+        >
+          <option class="color-option" *ngFor="let color of colorOptions">
+            {{ color }}
+          </option>
+        </select>
       </div>
       <div class="input-wrapper">
         <textarea
