--- a/src/app/notes/note-item/note-item.component.css
+++ b/src/app/notes/note-item/note-item.component.css
@@ -1,18 +1,17 @@
 .note-wrapper {
   box-shadow: 0px 0px 5px #666;
   border-radius: 10px;
-  background-color: #fae8a9;
   overflow: hidden;
   max-width: 200px;
   user-select: none;
   cursor: pointer;
+  transition: all 0.25s ease-out;
 
   animation: pop-in 0.25s ease-out forwards;
 }
 
 .note-header {
   box-shadow: 0px 0px 4px #333;
-  background-color: #fee68d;
   color: #333;
   font-size: 1rem;
   font-weight: bold;
@@ -26,7 +25,7 @@
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #333;
   top: 0;
   opacity: 0.1;
 }
