Final changes for colors

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <div class="logo">Notes</div>
-    <div>
+    <div style="display: flex; gap: 1rem;">
       <button type="button" (click)="onNewBtnClick()">
         New <span style="font-weight: bold">+</span>
       </button>
