--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,14 @@
 header {
   width: 100%;
   /* background-color: #ffca00; */
-  background-color: #e4b016;
+  background-color: #ffd21c;
   color: #333;
   box-shadow: 0px 2px 5px #999;
 
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 10;
 }
 
 nav {
