--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,8 @@
 header {
   width: 100%;
   /* background-color: #ffca00; */
-  background-color: #ffd21c;
-  color: #333;
+  background-color: var(--primary);
+  color: var(--gray-dark);
   box-shadow: 0px 2px 5px #999;
 
   position: fixed;
@@ -25,9 +25,9 @@ nav .logo {
 
 button {
   border: none;
-  background: #ffd000;
+  background: var(--primary);
   font-size: 1rem;
-  color: #555;
+  color: var(--gray-dark);
   border: solid 1px #555;
   border-radius: 8px;
   padding: 5px 1rem;
@@ -38,5 +38,5 @@ button {
 }
 
 button:hover {
-  background-color: #eebf00;
+  background-color: var(--white-shade);
 }
