--- a/src/app/new-note/new-note.component.css
+++ b/src/app/new-note/new-note.component.css
@@ -23,7 +23,6 @@
 }
 
 .main-body {
-  background: #efe4be;
   z-index: 1000;
   position: absolute;
   top: 20%;
@@ -33,7 +32,7 @@
   right: 0;
   max-width: 450px;
   border-radius: 10px;
-  box-shadow: 0px 0px 12px #333;
+  box-shadow: 0px 0px 12px var(--gray-dark);
 
   animation: pop-in 0.3s ease-out forwards;
 }
@@ -47,22 +46,11 @@
 }
 
 .footer {
-   padding: 0.75rem;
-   text-align: center;
-}
-
-.save {
-  background-color: #ffca00;
-}
-
-.save:disabled {
-  background-color: #e3c032;
-  color: #999;
-  cursor: default;
+  padding: 0.75rem;
+  text-align: center;
 }
 
 .input-wrapper-name {
-  background-color: #ffca00;
   padding: 0.75rem 1rem;
   padding-bottom: 0;
   width: 100%;
@@ -70,19 +58,33 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 10px 10px 0 0;
-  border-bottom: solid 1px #999;
+  border-bottom: solid 1px var(--gray-light);
+  position: relative;
 }
 
-input, textarea {
+.shade-backslash {
+  position: absolute;
+  background-color: var(--gray-dark);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.15;
+  z-index: -1;
+  border-radius: 10px 10px 0 0;
+}
+
+input,
+textarea {
   background: none;
   font-size: 1rem;
   border: none;
-  outline: none;  
+  outline: none;
   width: 100%;
   padding: 0.25rem 0;
 }
 
-input  {
+input {
   padding-bottom: 0.5rem;
   font-weight: bold;
 }
@@ -91,7 +93,7 @@ textarea {
   resize: none;
   padding: 0 1rem;
   padding-top: 0.75rem;
-  border-bottom: #999 solid 1px;
+  border-bottom: var(--gray-light) solid 1px;
 }
 
 button {
@@ -104,17 +106,27 @@ button {
   width: 6rem;
   border-radius: 5px;
   margin: 0 0.5rem 0 0.5rem;
-  border: solid 1px #999;
+  border: solid 1px var(--gray-light);
   cursor: pointer;
   transition: 0.1s;
 }
 
 button:hover {
-  background-color: #eee;
+  background-color: var(--white);
 }
 
-.color-option {
-  text-transform: capitalize;
+.save {
+  background: var(--white) !important;
+}
+
+.save:hover {
+  background: var(--white-shade) !important;
+}
+
+.save:disabled {
+  background: var(--white-shade) !important;
+  color: var(--gray-light);
+  cursor: default;
 }
 
 @keyframes fade-in {
