--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -1,10 +1,8 @@
 .notes-container {
-  display: flex;
-  gap: 1rem;
-  flex-wrap: wrap;
-  flex-shrink: 1;
-  flex-grow: 1;
-  flex-basis: 200px;
-
   padding: 1.25rem 1rem;
+  margin: 0 auto;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  max-width: 1200px;
 }
