--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
+:root {
+  --primary: #fac036;
+  --bg-default: #fbe9c0;
+
+  --gray-dark: #333;
+  --gray-default: #666;
+  --gray-light: #999;
+
+  --white-shade: #eee;
+  --white: #f9f9f9;
+}
+
 * {
   box-sizing: border-box;
   font-family: 'Comic Neue', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -10,5 +22,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #efe4be;
+  background-color: var(--bg-default);
 }
