--- a/src/app/notes/note-item/note-item.component.html
+++ b/src/app/notes/note-item/note-item.component.html
@@ -2,7 +2,7 @@
   class="note-wrapper"
   (click)="onNoteClick()"
   [style]="{ backgroundColor: data.shade }"
-  #container
+  #containerRef
 >
   <header class="note-header">
     <div class="backslash"></div>
