--- a/src/app/new-note/new-note.component.css
+++ b/src/app/new-note/new-note.component.css
@@ -33,6 +33,7 @@
   max-width: 450px;
   border-radius: 10px;
   box-shadow: 0px 0px 12px var(--gray-dark);
+  transition: all 0.5s ease-out;
 
   animation: pop-in 0.3s ease-out forwards;
 }
