--- a/src/app/notes/note-item/note-item.component.css
+++ b/src/app/notes/note-item/note-item.component.css
@@ -50,23 +50,29 @@
 .expand-note {
   position: fixed;
   z-index: 200;
-  transition: all 0.15s ease-out;
-  animation: pop-in 0.15s ease-out forwards;
-  opacity: 0;
+  transition: all 0.25s ease-out;
+  animation: pop-in 0.25s ease-out forwards;
 }
 
-.expand-note-after {
-  width: 70% !important;
-  height: 70% !important;
-  top: 20% !important;
-  animation: fade-in 0.25s ease-out forwards;
+.test-expand-note {
+  width: 80% !important;
+  height: 80% !important;
+  top: 50% !important;
+  left: 50% !important;
+  margin-top: -40% !important; /* Negative half of height. */
+  margin-left: -40% !important;
 }
 
-.expand-note-final {
-  left: 0 !important;
-  right: 0 !important;
-  margin: auto !important;
+.backslash {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  transition: all 0.25s ease-out;
   animation: fade-in 0.25s ease-out forwards;
+  z-index: 10;
 }
 
 @keyframes pop-in {
@@ -105,6 +111,6 @@
     opacity: 0;
   }
   to {
-    opacity: 1;
+    opacity: 0.25;
   }
 }
