--- a/src/app/notes/note-item/note-item.component.css
+++ b/src/app/notes/note-item/note-item.component.css
@@ -1,12 +1,14 @@
 .note-wrapper {
   box-shadow: 0px 0px 5px #666;
   border-radius: 10px;
-  overflow: hidden;
-  user-select: none;
-  cursor: pointer;
   transition: all 0.25s ease-out;
-  
   animation: pop-in 0.25s ease-out forwards;
+}
+
+.note-header-thumbnail {
+  overflow: hidden;
+  cursor: pointer;
+  user-select: none;
 }
 
 .note-header {
@@ -16,6 +18,53 @@
   font-weight: bold;
   padding: 8px 14px;
   position: relative;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-backslash {
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: #333;
+  width: 100%;
+  height: 100%;
+  opacity: 0.15;
+  z-index: 0;
+}
+
+.header-buttons {
+  display: flex;
+  gap: 6px;
+  z-index: 10;
+  animation: pop-in 0.25s ease-out forwards;
+}
+
+.header-dot-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 12px;
+  height: 12px;
+  border-radius: 12px;
+  font-size: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.maximize {
+  background: green;
+}
+.minimize {
+  background: yellow;
+}
+.close {
+  background: red;
 }
 
 .main-body {
@@ -26,8 +75,8 @@
 .note-header .header-title {
   text-overflow: ellipsis;
   white-space: nowrap;
-  user-select: none;
   overflow: hidden;
+  z-index: 10;
 }
 
 .note-body {
@@ -44,7 +93,6 @@
   overflow: hidden;
   margin: 0;
   line-height: 1.4;
-  user-select: none;
 }
 
 .expand-note {
@@ -56,10 +104,9 @@
 
 .test-expand-note {
   width: 80% !important;
-  height: 80% !important;
-  top: 50% !important;
+  height: 350px !important;
+  top: 10% !important;
   left: 50% !important;
-  margin-top: -40% !important; /* Negative half of height. */
   margin-left: -40% !important;
 }
 
@@ -73,6 +120,22 @@
   transition: all 0.25s ease-out;
   animation: fade-in 0.25s ease-out forwards;
   z-index: 10;
+}
+
+.fade-out-animation {
+  animation: fade-out 0.25s ease-out forwards;
+}
+
+.note-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2.5rem;
+  border-top: solid 1px #ccc;
+  display: flex;
+  align-items: center;
+  animation: pop-in 0.25s ease-out forwards;
 }
 
 @keyframes pop-in {
@@ -112,5 +175,14 @@
   }
   to {
     opacity: 0.25;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 0.25;
+  }
+  to {
+    opacity: 0;
   }
 }
