Animation fixes and final touches

--- a/src/app/notes/note-item/note-item.component.css
+++ b/src/app/notes/note-item/note-item.component.css
@@ -47,10 +47,10 @@
   background: none;
   border: none;
   cursor: pointer;
-  width: 12px;
-  height: 12px;
+  width: 14px;
+  height: 14px;
   border-radius: 12px;
-  font-size: 8px;
+  font-size: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,14 +58,9 @@
   margin: 0;
 }
 
-.maximize {
-  background: #19a619;
-}
-.minimize {
-  background: yellow;
-}
 .close {
   background: #ff4f4f;
+  color: #333;
 }
 
 .main-body {
